--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -38,7 +38,7 @@ background-color: #cdd6f4;
 
 #workspaces button.active {
 background-color: #1e1e2e;
-color: #89b4fa;
+color: @mauve;
 }
 
 #workspaces button.urgent {
@@ -49,7 +49,6 @@ color: #f38ba8;
 #clock,
 #pulseaudio,
 #custom-logo,
-#custom-power,
 #custom-spotify,
 #cpu,
 #tray,
